# Local-LLM-Launcher-GUI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.planning/plans/: local-llm-launcher-gui.md  sglang-integration.md
.planning/specs/: local-llm-launcher-gui.md
docs/: ABOUT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  VLLM_CLI_BACKGROUND.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/mockups/: 07-opspulse.html  HANDOVER.md
frontend/src/: App.jsx  api.js  components.jsx  main.jsx  theme.css
frontend/src/views/: Dashboard.jsx  Launch.jsx  Models.jsx  Servers.jsx  Settings.jsx
src/local_llm_launcher/: __main__.py  advisor.py  api.py  app.py  catalog.py  config.py  discovery.py  downloads.py  failures.py  hardware.py  openwebui.py  registry.py
src/local_llm_launcher/data/: failures.json  flags_llamacpp.json  flags_sglang.json  flags_vllm.json
src/local_llm_launcher/engines/: _args.py  base.py  llamacpp.py  sglang.py  vllm_docker.py  vllm_native.py
src/local_llm_launcher/static/: index.html
src/local_llm_launcher/static/assets/: index-BZH-xUrL.css  index-BwZQzAeE.css  index-CcAtY6vu.js  index-CtL2s00Z.js  index-Cxh8P-xS.js  index-DJXKCz5G.js  index-FI3pagJh.js  index-ZIP7nXz6.js  index-qBc5y8Rw.js
tests/: test_advisor.py  test_api.py  test_catalog.py  test_discovery.py  test_engines.py  test_hardware.py  test_openwebui.py  test_registry.py
